# learn

apache/: apache-memo.md
bash/: file.txt  file2.txt  file3.txt  hoge.sh  output_psaux.txt  setting.config  wslから作業フォルダへ.txt
bash/bash_security/: 01.valiable.sh  02.read_test.sh  03.ifelse.sh  04.func.sh
bash/basic/: base.sh  gemini.learn_01.sh  gemini.learn_02.sh  gemini.learn_03.sh  gemini.learn_04.sh  lib_utils.sh
bash/basic_02/: grep_output.txt  test.sh
bash/cookbook/: result.txt  result_12.txt
bash/mastering/: 01.cmd.sh  02.read.sh  03.loop.sh
bash/myscript/: awk_sample1.sh  debug_how.sh  news.txt  sed_sample2.sh  test.csv
bash/new_linux/: 2024-m-15.txt  color-test.sh  color.txt  fuku-sort.sh  fuku.sh  hoge.sh  (+6 more)
docker/: docker.sln  docker_test.sh  完全入門memo.md
dos-cmd/: dir-list.txt  filename.txt  ms-dos.md  treedata.txt
editor/: hidemaru.key
excel/: excel-learn.txt  hoge1.xlsx
filer/: HmFilerClassic2025-01-19.hfcreg
linux-cmd/: hoge.sh
memo/: ローカルのIISでReactを動かす.md
nginx/: nginx-memo.txt  test.html
python/fastapi_sample_開発入門/fastapi-book-example/: docker-compose.yaml  entrypoint.sh  pyproject.toml
python/fastapi_sample_開発入門/fastapi-book-example/api/: db.py  main.py
python/fastapi_sample_開発入門/fastapi-book-example/api/cruds/: task.py
python/fastapi_sample_開発入門/fastapi-book-example/api/models/: task.py
python/fastapi_sample_開発入門/fastapi-book-example/api/routers/: task.py
python/fastapi_sample_開発入門/fastapi-book-example/api/schemas/: task.py
python/fastapi_sample_開発入門/fastapi-book-example/tests/: test_main.py
react/: react.md
(+1276 files in other folders)
